--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dependencies": {
         "express": "3.4.4",
         "jade": "*",
-        "mocha": "~1.17.1"
+        "mocha": "~1.17.1",
+        "passport": "~0.2.0",
+        "passport-github": "~0.1.5"
     },
     "devDependencies": {
         "mocha": "~1.17.1"
