--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "jade": "*",
         "mocha": "~1.17.1",
         "passport": "~0.2.0",
-        "passport-github": "~0.1.5"
+        "passport-github": "~0.1.5",
+        "convict": "~0.4.2"
     },
     "devDependencies": {
         "mocha": "~1.17.1"
