--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "mocha": "~1.17.1",
         "passport": "~0.2.0",
         "passport-github": "~0.1.5",
-        "convict": "~0.4.2"
+        "convict": "~0.4.2",
+        "socket.io": "0.9.x"
     },
     "devDependencies": {
         "mocha": "~1.17.1",
